--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+SW.js.map
+assets/canvas2d/global.js.map
+bundle/bundle.js.map
+assets/canvas2d/index.js.map
+assets/canvas2d/index.js
