--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
 	"dependencies": {
 		"classui": "*",
 		"es6-promise": "^4.1.1",
-		"mongodb": "^2.2.33"
+		"mongodb": "^2.2.33"		
 	},
 	"devDependencies": {
 		"express": "^4.16.2",
-		"socket.io": "^2.0.4"
+		"socket.io": "^2.0.4",
+		"uuid": "^3.1.0"
 	},
 	"author": "Kishore <kishore.iiitn@gmail.com>",
 	"license": "ISC"
