--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 	"dependencies": {
 		"classui": "*",
 		"es6-promise": "^4.1.1",
-		"mongodb": "^2.2.33"		
+		"mongodb": "^2.2.33",
+		"uuid": "^3.1.0"		
 	},
 	"devDependencies": {
 		"express": "^4.16.2",
-		"socket.io": "^2.0.4",
-		"uuid": "^3.1.0"
+		"socket.io": "^2.0.4"
 	},
 	"author": "Kishore <kishore.iiitn@gmail.com>",
 	"license": "ISC"
